ENG-4636: fix code style