@@ -1,5 +1,8 @@
 package org.entando.kubernetes.stubhelper;
 
+import java.util.Arrays;
+import java.util.List;
+import java.util.Set;
 import org.entando.kubernetes.client.hub.ProxiedPayload;
 import org.entando.kubernetes.client.hub.domain.BundleDto;
 import org.entando.kubernetes.client.hub.domain.BundleEntityDto;
@@ -14,11 +17,36 @@ import org.entando.kubernetes.client.hub.domain.PagedContent;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.http.HttpStatus;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Set;
-
 public class HubStubHelper {
+
+    public static final Long ID = 30L;
+    public static final Long BUNDLE_GROUP_ID = 10L;
+    public static final Long BUNDLE_GROUP_VERSION_ID = 100L;
+    public static final Long CATALOG_ID = 70L;
+    public static final String NAME = "entando bundle";
+    public static final String DESCRIPTION = "my descr";
+    public static final HubDescriptorVersion DESCRIPTOR_VERSION = HubDescriptorVersion.V5;
+    public static final String DEPENDENCIES = "my deps";
+    public static final String DESCRIPTION_IMAGE = "wonderful image";
+    public static final String DOCUMENTATION_URL = "http://www.entando.com";
+    public static final String GIT_REPO_ADDRESS = "http://www.github.com/entando/test";
+    public static final String GIT_SRC_REPO_ADDRESS = "http://www.github.com/entando/srctest";
+    public static final String VERSION = "v1.0.0";
+    public static final BundleGroupVersionStatus STATUS = BundleGroupVersionStatus.PUBLISHED;
+    public static final Long ORGANISATION_ID = 5L;
+    public static final String ORGANISATION_NAME = "Entando org";
+    public static final String ORGANISATION_DESCR = "Entando org descr";
+    public static final boolean PUBLIC_CATALOG = true;
+    public static final List<String> CATEGORIES = List.of("cat 1", "cat 2");
+    public static final List<String> CHILDREN = List.of("child 1", "child 2");
+    public static final List<String> ALL_VERSIONS = List.of("v1.0.0", "v2.0.0");
+    public static final String BUNDLE_GROUP_URL = "http://www.mybundle.com";
+    public static final Boolean IS_EDITABLE = true;
+    public static final boolean CAN_ADD_NEW_VERSION = true;
+    public static final Boolean DISPLAY_CONTACT_URL = true;
+    public static final String CONTACT_URL = "http://www.entando.com/contacts";
+    private static final String BUNDLE_ID = "2677";
+    private static final String BUNDLE_NAME = "Yet another bundle";
 
     public static ProxiedPayload<PagedContent<BundleGroupVersionFilteredResponseView, BundleGroupVersionEntityDto>> stubBundleGroupVersionsProxiedPayload() {
 
@@ -49,51 +77,6 @@ public class HubStubHelper {
                 List.of(stubBundleDto()),
                 new PageImpl<>(List.of(stubBundleEntityDto())));
     }
-
-    private static BundleEntityDto stubBundleEntityDto() {
-        return BundleEntityDto.builder()
-                .id(Long.parseLong(BUNDLE_ID))
-                .name(BUNDLE_NAME)
-                .descriptorVersion(DESCRIPTOR_VERSION)
-                .gitRepoAddress(GIT_REPO_ADDRESS)
-                .gitSrcRepoAddress(GIT_SRC_REPO_ADDRESS)
-                .dependencies(DEPENDENCIES)
-                .bundleGroupVersions(Set.of(stubBundleGroupVersionEntityDto()))
-                .build();
-    }
-
-    private static final String BUNDLE_ID = "2677";
-    private static final String BUNDLE_NAME = "Yet another bundle";
-    public static final Long ID = 30L;
-    public static final Long BUNDLE_GROUP_ID = 10L;
-    public static final Long BUNDLE_GROUP_VERSION_ID = 100L;
-    public static final Long CATALOG_ID = 70L;
-    public static final String NAME = "entando bundle";
-    public static final String DESCRIPTION = "my descr";
-    public static final HubDescriptorVersion DESCRIPTOR_VERSION = HubDescriptorVersion.V5;
-    public static final String DEPENDENCIES = "my deps";
-    public static final String DESCRIPTION_IMAGE = "wonderful image";
-    public static final String DOCUMENTATION_URL = "http://www.entando.com";
-    public static final String GIT_REPO_ADDRESS = "http://www.github.com/entando/test";
-    public static final String GIT_SRC_REPO_ADDRESS = "http://www.github.com/entando/srctest";
-    public static final String VERSION = "v1.0.0";
-    public static final BundleGroupVersionStatus STATUS = BundleGroupVersionStatus.PUBLISHED;
-    public static final Long ORGANISATION_ID = 5L;
-    public static final String ORGANISATION_NAME = "Entando org";
-    public static final String ORGANISATION_DESCR = "Entando org descr";
-    public static final boolean PUBLIC_CATALOG = true;
-    public static final List<String> CATEGORIES = List.of("cat 1", "cat 2");
-    public static final List<String> CHILDREN = List.of("child 1", "child 2");
-    public static final List<String> ALL_VERSIONS = List.of("v1.0.0", "v2.0.0");
-    //    public static final LocalDateTime createdAt;
-//    public static final LocalDateTime lastUpdate;
-    public static final String BUNDLE_GROUP_URL = "http://www.mybundle.com";
-    public static final Boolean IS_EDITABLE = true;
-    public static final boolean CAN_ADD_NEW_VERSION = true;
-    public static final Boolean DISPLAY_CONTACT_URL = true;
-    public static final String CONTACT_URL = "http://www.entando.com/contacts";
-
-
 
     public static BundleGroupVersionFilteredResponseView stubBundleGroupVersionFilteredResponseView() {
         return new BundleGroupVersionFilteredResponseView()
@@ -131,7 +114,6 @@ public class HubStubHelper {
         stub.setContactUrl(CONTACT_URL);
         stub.setBundleGroup(stubBundleGroupEntityDto());
         stub.setBundles(Set.of(stubBundleEntityDto(1), stubBundleEntityDto(2)));
-//        stub.setLastUpdated();
         return stub;
     }
 
@@ -162,6 +144,18 @@ public class HubStubHelper {
                 .build();
     }
 
+    private static BundleEntityDto stubBundleEntityDto() {
+        return BundleEntityDto.builder()
+                .id(Long.parseLong(BUNDLE_ID))
+                .name(BUNDLE_NAME)
+                .descriptorVersion(DESCRIPTOR_VERSION)
+                .gitRepoAddress(GIT_REPO_ADDRESS)
+                .gitSrcRepoAddress(GIT_SRC_REPO_ADDRESS)
+                .dependencies(DEPENDENCIES)
+                .bundleGroupVersions(Set.of(stubBundleGroupVersionEntityDto()))
+                .build();
+    }
+
     public static BundleEntityDto stubBundleEntityDto(int i) {
         return BundleEntityDto.builder()
                 .id(ORGANISATION_ID + i)
@@ -184,7 +178,7 @@ public class HubStubHelper {
                 .gitRepoAddress(GIT_REPO_ADDRESS)
                 .gitSrcRepoAddress(GIT_SRC_REPO_ADDRESS)
                 .dependencies(Arrays.asList(DEPENDENCIES.split(" ")))
-                .bundleGroups(Arrays.asList(BUNDLE_GROUP_ID.toString()))
+                .bundleGroups(List.of(BUNDLE_GROUP_ID.toString()))
                 .build();
     }
 }
